# hapai

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  .sonarcloud.yml  0001-fix-audit-eliminate-duplicate-events-across-the-full.patch  AGENTS.md  APPLYING_PATTERN_TO_OTHER_SERVICES.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  EXECUTIVE_SUMMARY.md  GCP-DEPLOYMENT.md  INTEGRATIONS.md  NEXT_STEPS_CHECKLIST.md  QUALITY_STANDARDS.md  README.md  REFACTORING_COMPLETION.md  SUBMODULES.md  TESTING.md  USAGE.md  contributing.md  docker-compose.yml  hapai.defaults.yaml  hapai.yaml  install.sh  package-lock.json  package.json  tsconfig.json
.claude/: launch.json  settings.json
.gcp/: .gitignore  QUICK-REFERENCE.md  README.md  create-secrets.sh  deploy.sh  setup.sh
.github/: CI_CD_PIPELINE.md  ESLINT_CONFIGURATION.md  GITHUB_SECRETS_SETUP.md  QUALITY_GATES.md  dependabot.yml  pull_request_template.md
_bmad/: status.md
_bmad/spikes/sp-01/: Cargo.toml
_bmad/spikes/sp-01/results/: runs.json
_bmad/spikes/sp-01/src/: gemini.rs  main.rs  schemas.rs
_site/: index.html
ensi/: .env.example  .gitignore  Cargo.toml
ensi/crates/ensi-cli/: Cargo.toml
ensi/crates/ensi-cli/src/: main.rs
ensi/crates/ensi-core/: Cargo.toml
ensi/crates/ensi-core/src/: errors.rs  lib.rs
ensi/crates/ensi-core/src/domain/: agent.rs  artifact.rs  comment.rs  daemon_token.rs  issue.rs  member.rs  mod.rs  pat.rs  pipeline_state.rs  project.rs  task.rs  task_message.rs  workspace.rs
ensi/crates/ensi-core/src/ports/: agent_executor.rs  agent_repo.rs  artifact_repo.rs  artifact_store.rs  comment_repo.rs  daemon_token_repo.rs  event_publisher.rs  issue_repo.rs  member_repo.rs  mod.rs  pat_repo.rs  pipeline_repo.rs  project_repo.rs  task_repo.rs  workspace_repo.rs
ensi/crates/ensi-daemon/: Cargo.toml
ensi/crates/ensi-daemon/src/: main.rs
ensi/crates/ensi-db/: Cargo.toml
ensi/crates/ensi-db/src/: client.rs  error.rs  lib.rs
ensi/crates/ensi-db/src/migrations/: V001__initial_schema.surql
ensi/crates/ensi-db/src/repo/: mod.rs
ensi/crates/ensi-events/: Cargo.toml
ensi/crates/ensi-events/src/: lib.rs
ensi/crates/ensi-frontend/: Cargo.toml
ensi/crates/ensi-frontend/src/: lib.rs
ensi/crates/ensi-pipeline/: Cargo.toml
ensi/crates/ensi-pipeline/src/: lib.rs
ensi/crates/ensi-server/: Cargo.toml
ensi/crates/ensi-server/src/: main.rs
exporters/: export-antigravity.sh  export-copilot.sh  export-cursor.sh  export-devin.sh  export-trae.sh  (+2 more)
(+170 files in other folders)
