[workspace]
members = [
    "crates/ensi-core",
    "crates/ensi-db",
    "crates/ensi-events",
    "crates/ensi-pipeline",
    "crates/ensi-server",
    "crates/ensi-daemon",
    "crates/ensi-frontend",
    "crates/ensi-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Renato Bardi"]
license = "MIT"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
