[package]
name = "sp-01-gemini-spike"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sp01"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
