[package]
name = "ensi-db"
version.workspace = true
edition.workspace = true

[dependencies]
ensi-core = { path = "../ensi-core" }

surrealdb = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
